// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Banners|AlertBanner default 1`] = `
<section
  className="sc-bxivhb eMtVEh"
>
  <div
    className="sc-EHOje jtyqUw"
  >
    <p>
      alert text
      <button
        className="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-contained-12 MuiButton-raised-15 sc-ifAKCX bqdATS sc-bdVaJa eKQRDg"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-2 label"
        >
          button text
        </span>
      </button>
    </p>
  </div>
</section>
`;

exports[`Storyshots Banners|ErrorSuccessBanner error 1`] = `
<div
  className="sc-gzVnrw avLPF"
  color="#C1363F"
>
  <div
    className="sc-htoDjs kYYNpa"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-30 root styled-icon sc-VigVT bkqdLp"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
      />
    </svg>
  </div>
  <div
    className="sc-iwsKbI dwDcyq"
  >
    error
  </div>
  <button
    className="MuiButtonBase-root-65 MuiButton-root-39 MuiButton-contained-50 MuiButton-raised-53 sc-dnqmqq ibEVtO sc-bdVaJa eKQRDg"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-40 label"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-30 root styled-icon sc-gZMcBi fwoZLL"
        focusable="false"
        role="presentation"
        viewBox="0 0 500 500"
      >
        <path
          clipRule="evenodd"
          d="M483 456.3L275.7 249 483 41.7 456.3 15 249 222.3 41.7 15 15 41.7 222.3 249 15 456.3 41.7 483 249 275.7 456.3 483z"
          fillRule="evenodd"
        />
      </svg>
      
    </span>
  </button>
</div>
`;

exports[`Storyshots Banners|ErrorSuccessBanner success 1`] = `
<div
  className="sc-gzVnrw dHKoqK"
  color="#5DBA9C"
>
  <div
    className="sc-htoDjs kYYNpa"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-68 root styled-icon sc-gqjmRU kVDmhf"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0h24v24H0V0zm0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M16.59 7.58L10 14.17l-3.59-3.58L5 12l5 5 8-8zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
  </div>
  <div
    className="sc-iwsKbI dwDcyq"
  >
    success
  </div>
  <button
    className="MuiButtonBase-root-103 MuiButton-root-77 MuiButton-contained-88 MuiButton-raised-91 sc-dnqmqq ibEVtO sc-bdVaJa eKQRDg"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-78 label"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-68 root styled-icon sc-gZMcBi fwoZLL"
        focusable="false"
        role="presentation"
        viewBox="0 0 500 500"
      >
        <path
          clipRule="evenodd"
          d="M483 456.3L275.7 249 483 41.7 456.3 15 249 222.3 41.7 15 15 41.7 222.3 249 15 456.3 41.7 483 249 275.7 456.3 483z"
          fillRule="evenodd"
        />
      </svg>
      
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons|BaseButton default 1`] = `
<button
  className="MuiButtonBase-root-132 MuiButton-root-106 MuiButton-contained-117 MuiButton-raised-120 sc-bdVaJa eKQRDg"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-107 label"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-135 root styled-icon sc-fMiknA fHgBpm"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    LABEL TEXT
  </span>
</button>
`;

exports[`Storyshots Buttons|FlatIconButton default 1`] = `
<button
  aria-describedby={null}
  className="MuiButtonBase-root-178 MuiButton-root-152 MuiButton-contained-163 MuiButton-raised-166 sc-bZQynM jlZJzO sc-bdVaJa eKQRDg"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  title="tooltip text"
  type="button"
>
  <span
    className="MuiButton-label-153 label"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-181 root styled-icon sc-dVhcbM cSbfGs"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    LABEL TEXT
  </span>
</button>
`;

exports[`Storyshots Buttons|GhostButton default 1`] = `
<button
  className="MuiButtonBase-root-216 MuiButton-root-190 MuiButton-contained-201 MuiButton-raised-204 sc-jzJRlG hTvvkz sc-bdVaJa eKQRDg"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-191 label"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-219 root styled-icon sc-eqIVtm etvAfY"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    LABEL TEXT
  </span>
</button>
`;

exports[`Storyshots Buttons|IconButton default 1`] = `
<button
  className="MuiButtonBase-root-234 MuiIconButton-root-228"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiIconButton-label-233"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-237 root styled-icon sc-fAjcbJ feyQBz"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
  </span>
  <span
    className="MuiTouchRipple-root-246"
  />
</button>
`;

exports[`Storyshots Buttons|IconButton disabled 1`] = `
<button
  className="MuiButtonBase-root-259 MuiButtonBase-disabled-260 MuiIconButton-root-253 MuiIconButton-disabled-257"
  disabled={true}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="-1"
  type="button"
>
  <span
    className="MuiIconButton-label-258"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-262 root styled-icon sc-caSCKo fQYLsh"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
  </span>
</button>
`;

exports[`Storyshots Buttons|PrimaryButton default 1`] = `
<button
  className="MuiButtonBase-root-297 MuiButton-root-271 MuiButton-contained-282 MuiButton-raised-285 sc-jTzLTM lcwPIJ sc-bdVaJa eKQRDg"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-272 label"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-300 root styled-icon sc-gisBJw hFUNto"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    LABEL TEXT
  </span>
</button>
`;

exports[`Storyshots Buttons|SecondaryButton default 1`] = `
<button
  className="MuiButtonBase-root-335 MuiButton-root-309 MuiButton-contained-320 MuiButton-raised-323 sc-fjdhpX dQkZpA sc-bdVaJa eKQRDg"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-310 label"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-338 root styled-icon sc-kjoXOD cuioRy"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    LABEL TEXT
  </span>
</button>
`;

exports[`Storyshots Buttons|TextButton default 1`] = `
<button
  className="MuiButtonBase-root-373 MuiButton-root-347 MuiButton-contained-358 MuiButton-raised-361 sc-htpNat fzSZoe sc-bdVaJa eKQRDg"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-348 label"
  >
    LABEL TEXT
  </span>
</button>
`;

exports[`Storyshots Buttons|TooltipButton default 1`] = `
<button
  aria-describedby={null}
  className="MuiButtonBase-root-410 MuiButton-root-384 MuiButton-contained-395 MuiButton-raised-398 sc-bdVaJa eKQRDg"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  title="tooltip text"
  type="button"
>
  <span
    className="MuiButton-label-385 label"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-413 root styled-icon sc-cHGsZl evGqlt"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    LABEL TEXT
  </span>
</button>
`;

exports[`Storyshots Cards|BaseCard default 1`] = `
<div
  className="MuiPaper-root-423 MuiPaper-elevation1-426 MuiPaper-rounded-424 MuiCard-root-422 card sc-cSHVUG dvYpwr"
  color="#310078"
>
  <div
    style={
      Object {
        "padding": "1rem",
      }
    }
  >
    card text
  </div>
</div>
`;

exports[`Storyshots Cards|BaseCard image 1`] = `
<div
  className="MuiPaper-root-479 MuiPaper-elevation1-482 MuiPaper-rounded-480 MuiCard-root-478 card sc-cSHVUG dvYpwr"
  color="#310078"
>
  <div
    style={
      Object {
        "padding": "1rem",
      }
    }
  >
    <img
      alt="placeholder"
      src="imagePlaceholder.svg"
      style={
        Object {
          "width": "10rem",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Cards|BaseCard title 1`] = `
<div
  className="MuiPaper-root-451 MuiPaper-elevation1-454 MuiPaper-rounded-452 MuiCard-root-450 card sc-cSHVUG dvYpwr"
  color="#310078"
>
  <div
    style={
      Object {
        "padding": "1rem",
      }
    }
  >
    <h1
      className="sc-kAzzGY dFlnQs"
    >
      card text
    </h1>
  </div>
</div>
`;

exports[`Storyshots Checkbox|Checkbox default 1`] = `
<span
  className="MuiButtonBase-root-522 MuiIconButton-root-516 MuiPrivateSwitchBase-root-512 MuiCheckbox-root-506 MuiPrivateSwitchBase-checked-513 MuiCheckbox-checked-507"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={null}
>
  <span
    className="MuiIconButton-label-521"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-525"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
      />
    </svg>
    <input
      checked={true}
      className="MuiPrivateSwitchBase-input-515"
      data-indeterminate={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
      value="value"
    />
  </span>
  <span
    className="MuiTouchRipple-root-534"
  />
</span>
`;

exports[`Storyshots Checkbox|Checkbox disabled 1`] = `
<span
  className="MuiButtonBase-root-592 MuiButtonBase-disabled-593 MuiIconButton-root-586 MuiIconButton-disabled-590 MuiPrivateSwitchBase-root-582 MuiCheckbox-root-576 MuiCheckbox-colorSecondary-581 MuiPrivateSwitchBase-disabled-584 MuiCheckbox-disabled-578"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="-1"
>
  <span
    className="MuiIconButton-label-591"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-595"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
      />
    </svg>
    <input
      checked={false}
      className="MuiPrivateSwitchBase-input-585"
      data-indeterminate={false}
      disabled={true}
      onChange={[Function]}
      type="checkbox"
      value="value"
    />
  </span>
</span>
`;

exports[`Storyshots Checkbox|Checkbox unchecked 1`] = `
<span
  className="MuiButtonBase-root-557 MuiIconButton-root-551 MuiPrivateSwitchBase-root-547 MuiCheckbox-root-541 MuiCheckbox-colorSecondary-546"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={null}
>
  <span
    className="MuiIconButton-label-556"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-560"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
      />
    </svg>
    <input
      checked={false}
      className="MuiPrivateSwitchBase-input-550"
      data-indeterminate={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
      value="value"
    />
  </span>
  <span
    className="MuiTouchRipple-root-569"
  />
</span>
`;

exports[`Storyshots ExpansionPanel|ExpansionPanel default 1`] = `
<div
  className="MuiPaper-root-608 MuiPaper-elevation1-611 MuiExpansionPanel-root-604 sc-chPdSV bpjWMt"
>
  <div
    aria-expanded={false}
    className="MuiButtonBase-root-641 MuiExpansionPanelSummary-root-635"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiExpansionPanelSummary-content-639"
    >
      <p
        className="MuiTypography-root-644 MuiTypography-body2-652"
        style={
          Object {
            "flexBasis": "33.33%",
            "flexShrink": 0,
            "fontSize": "1.6rem",
          }
        }
      >
        Expansion Panel
      </p>
    </div>
    <div
      aria-hidden="true"
      className="MuiButtonBase-root-641 MuiIconButton-root-680 MuiExpansionPanelSummary-expandIcon-640"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={-1}
    >
      <span
        className="MuiIconButton-label-685"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-686 root styled-icon sc-TOsTZ dzBIBH"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root-700"
      />
    </div>
  </div>
  <div
    aria-hidden="true"
    className="MuiCollapse-container-695 collapse-container"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper-697"
    >
      <div
        className="MuiCollapse-wrapperInner-698"
      >
        <div
          className="MuiExpansionPanelDetails-root-699"
        >
          <p
            className="MuiTypography-root-644 MuiTypography-body2-652"
            style={
              Object {
                "fontSize": "1.6rem",
              }
            }
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
Suspendisse malesuada lacus ex, sit amet blandit leo lobortis
eget.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ExpansionPanel|ExpansionPanel disabled 1`] = `
<div
  className="MuiPaper-root-917 MuiPaper-elevation1-920 MuiExpansionPanel-root-913 MuiExpansionPanel-disabled-916 sc-chPdSV bpjWMt"
>
  <div
    aria-expanded={false}
    className="MuiButtonBase-root-950 MuiButtonBase-disabled-951 MuiExpansionPanelSummary-root-944 MuiExpansionPanelSummary-disabled-947"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="-1"
  >
    <div
      className="MuiExpansionPanelSummary-content-948"
    >
      <p
        className="MuiTypography-root-953 MuiTypography-body2-961"
        style={
          Object {
            "flexBasis": "33.33%",
            "flexShrink": 0,
            "fontSize": "1.6rem",
          }
        }
      >
        Expansion Panel
      </p>
    </div>
    <div
      aria-hidden="true"
      className="MuiButtonBase-root-950 MuiButtonBase-disabled-951 MuiIconButton-root-989 MuiIconButton-disabled-993 MuiExpansionPanelSummary-expandIcon-949"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex="-1"
    >
      <span
        className="MuiIconButton-label-994"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-995 root styled-icon sc-ksYbfQ hUJVwx"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    aria-hidden="true"
    className="MuiCollapse-container-1004 collapse-container"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper-1006"
    >
      <div
        className="MuiCollapse-wrapperInner-1007"
      >
        <div
          className="MuiExpansionPanelDetails-root-1008"
        >
          <p
            className="MuiTypography-root-953 MuiTypography-body2-961"
            style={
              Object {
                "fontSize": "1.6rem",
              }
            }
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
Suspendisse malesuada lacus ex, sit amet blandit leo lobortis
eget.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ExpansionPanel|ExpansionPanel expanded 1`] = `
<div
  className="MuiPaper-root-814 MuiPaper-elevation1-817 MuiExpansionPanel-root-810 MuiExpansionPanel-expanded-812 expanded sc-chPdSV bpjWMt"
>
  <div
    aria-expanded={true}
    className="MuiButtonBase-root-847 MuiExpansionPanelSummary-root-841 MuiExpansionPanelSummary-expanded-842"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiExpansionPanelSummary-content-845 MuiExpansionPanelSummary-expanded-842"
    >
      <p
        className="MuiTypography-root-850 MuiTypography-body2-858"
        style={
          Object {
            "flexBasis": "33.33%",
            "flexShrink": 0,
            "fontSize": "1.6rem",
          }
        }
      >
        Expansion Panel
      </p>
    </div>
    <div
      aria-hidden="true"
      className="MuiButtonBase-root-847 MuiIconButton-root-886 MuiExpansionPanelSummary-expandIcon-846 MuiExpansionPanelSummary-expanded-842"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={-1}
    >
      <span
        className="MuiIconButton-label-891"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-892 root styled-icon sc-cJSrbW ivYyXw"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root-906"
      />
    </div>
  </div>
  <div
    className="MuiCollapse-container-901 collapse-container MuiCollapse-entered-902"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper-903"
    >
      <div
        className="MuiCollapse-wrapperInner-904"
      >
        <div
          className="MuiExpansionPanelDetails-root-905"
        >
          <p
            className="MuiTypography-root-850 MuiTypography-body2-858"
            style={
              Object {
                "fontSize": "1.6rem",
              }
            }
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
Suspendisse malesuada lacus ex, sit amet blandit leo lobortis
eget.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ExpansionPanel|ExpansionPanel no expand icon 1`] = `
<div
  className="MuiPaper-root-1013 MuiPaper-elevation1-1016 MuiExpansionPanel-root-1009 sc-chPdSV bpjWMt"
>
  <div
    aria-expanded={false}
    className="MuiButtonBase-root-1046 MuiExpansionPanelSummary-root-1040"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "flexBasis": "33.33%",
        "flexShrink": 0,
        "fontSize": "1.6rem",
      }
    }
    tabIndex="0"
  >
    <div
      className="MuiExpansionPanelSummary-content-1044"
    >
      <p
        className="MuiTypography-root-1049 MuiTypography-body2-1057"
        style={
          Object {
            "flexBasis": "33.33%",
            "flexShrink": 0,
            "fontSize": "1.6rem",
          }
        }
      >
        Expansion Panel
      </p>
    </div>
  </div>
  <div
    aria-hidden="true"
    className="MuiCollapse-container-1085 collapse-container"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper-1087"
    >
      <div
        className="MuiCollapse-wrapperInner-1088"
      >
        <div
          className="MuiExpansionPanelDetails-root-1089"
        >
          <p
            className="MuiTypography-root-1049 MuiTypography-body2-1057"
            style={
              Object {
                "fontSize": "1.6rem",
              }
            }
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
Suspendisse malesuada lacus ex, sit amet blandit leo lobortis
eget.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ExpansionPanel|ExpansionPanel secondary text 1`] = `
<div
  className="MuiPaper-root-711 MuiPaper-elevation1-714 MuiExpansionPanel-root-707 sc-chPdSV bpjWMt"
>
  <div
    aria-expanded={false}
    className="MuiButtonBase-root-744 MuiExpansionPanelSummary-root-738"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiExpansionPanelSummary-content-742"
    >
      <p
        className="MuiTypography-root-747 MuiTypography-body2-755"
        style={
          Object {
            "flexBasis": "33.33%",
            "flexShrink": 0,
            "fontSize": "1.6rem",
          }
        }
      >
        Expansion Panel
      </p>
      <p
        className="MuiTypography-root-747 MuiTypography-body2-755"
        style={
          Object {
            "color": "#777",
            "fontSize": "1.6rem",
          }
        }
      >
        Lorem ipsum dolor sit amet consectetur
      </p>
    </div>
    <div
      aria-hidden="true"
      className="MuiButtonBase-root-744 MuiIconButton-root-783 MuiExpansionPanelSummary-expandIcon-743"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={-1}
    >
      <span
        className="MuiIconButton-label-788"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-789 root styled-icon sc-kgAjT hrIreW"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root-803"
      />
    </div>
  </div>
  <div
    aria-hidden="true"
    className="MuiCollapse-container-798 collapse-container"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper-800"
    >
      <div
        className="MuiCollapse-wrapperInner-801"
      >
        <div
          className="MuiExpansionPanelDetails-root-802"
        >
          <p
            className="MuiTypography-root-747 MuiTypography-body2-755"
            style={
              Object {
                "fontSize": "1.6rem",
              }
            }
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
Suspendisse malesuada lacus ex, sit amet blandit leo lobortis
eget.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Headings|H1 default 1`] = `
<h1
  className="sc-kgoBCf dqMhJZ"
  style={
    Object {
      "color": "#464A53",
    }
  }
>
  H1 HEADER TEXT
</h1>
`;

exports[`Storyshots Headings|H2 default 1`] = `
<h2
  className="sc-kGXeez fxVvND"
  style={
    Object {
      "color": "#464A53",
    }
  }
>
  H2 HEADER TEXT
</h2>
`;

exports[`Storyshots Headings|H3 default 1`] = `
<h3
  className="sc-kpOJdX cfnwxo"
  style={
    Object {
      "color": "#464A53",
    }
  }
>
  H3 HEADER TEXT
</h3>
`;

exports[`Storyshots Icons|TooltipIcon content 1`] = `
<svg
  aria-describedby={null}
  aria-hidden="true"
  className="MuiSvgIcon-root-1115 root sc-dxgOiQ VgHrb styled-icon sc-frDJqD dwSIIp"
  focusable="false"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  role="presentation"
  title={null}
  viewBox="0 0 24 24"
>
  <path
    d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
  />
  <path
    d="M0 0h24v24H0V0z"
    fill="none"
  />
</svg>
`;

exports[`Storyshots Icons|TooltipIcon default 1`] = `
<svg
  aria-describedby={null}
  aria-hidden="true"
  className="MuiSvgIcon-root-1098 root sc-dxgOiQ VgHrb styled-icon sc-hmzhuo efELuS"
  focusable="false"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  role="presentation"
  title={null}
  viewBox="0 0 24 24"
>
  <path
    d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
  />
  <path
    d="M0 0h24v24H0V0z"
    fill="none"
  />
</svg>
`;

exports[`Storyshots Inputs|CurrencyInput default 1`] = `
<div
  className="MuiFormControl-root-1124 root MuiFormControl-marginNormal-1125 sc-kEYyzF eSnDJP sc-hMqMXs guUkGE"
>
  <div
    className="MuiInputBase-root-1141 MuiOutlinedInput-root-1128 base-input MuiInputBase-formControl-1142 MuiInputBase-adornedStart-1145 MuiOutlinedInput-adornedStart-1131"
    onClick={[Function]}
  >
    <fieldset
      aria-hidden={true}
      className="MuiPrivateNotchedOutline-root-1158 MuiOutlinedInput-notchedOutline-1135 outline"
      style={
        Object {
          "paddingLeft": 8,
        }
      }
    >
      <legend
        className="MuiPrivateNotchedOutline-legend-1159"
        style={
          Object {
            "width": 0,
          }
        }
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </legend>
    </fieldset>
    <div
      className="MuiInputAdornment-root-1160 MuiInputAdornment-positionStart-1162"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-1165 root styled-icon sc-kkGfuU fJNJew"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.8 10.9c-2.27-.59-3-1.2-3-2.15 0-1.09 1.01-1.85 2.7-1.85 1.78 0 2.44.85 2.5 2.1h2.21c-.07-1.72-1.12-3.3-3.21-3.81V3h-3v2.16c-1.94.42-3.5 1.68-3.5 3.61 0 2.31 1.91 3.46 4.7 4.13 2.5.6 3 1.48 3 2.41 0 .69-.49 1.79-2.7 1.79-2.06 0-2.87-.92-2.98-2.1h-2.2c.12 2.19 1.76 3.42 3.68 3.83V21h3v-2.15c1.95-.37 3.5-1.5 3.5-3.55 0-2.84-2.43-3.81-4.7-4.4z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </div>
    <input
      aria-invalid={false}
      className="MuiInputBase-input-1151 MuiOutlinedInput-input-1136 input MuiInputBase-inputType-1154 MuiInputBase-inputAdornedStart-1156 MuiOutlinedInput-inputAdornedStart-1139"
      disabled={false}
      min={1}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="0.00"
      required={false}
      type="number"
      value={null}
    />
  </div>
</div>
`;

exports[`Storyshots Inputs|CurrencyInput helper text 1`] = `
<div
  className="MuiFormControl-root-1174 root MuiFormControl-marginNormal-1175 sc-kEYyzF eSnDJP sc-hMqMXs guUkGE"
>
  <div
    className="MuiInputBase-root-1191 MuiOutlinedInput-root-1178 base-input MuiInputBase-formControl-1192 MuiInputBase-adornedStart-1195 MuiOutlinedInput-adornedStart-1181"
    onClick={[Function]}
  >
    <fieldset
      aria-hidden={true}
      className="MuiPrivateNotchedOutline-root-1208 MuiOutlinedInput-notchedOutline-1185 outline"
      style={
        Object {
          "paddingLeft": 8,
        }
      }
    >
      <legend
        className="MuiPrivateNotchedOutline-legend-1209"
        style={
          Object {
            "width": 0,
          }
        }
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </legend>
    </fieldset>
    <div
      className="MuiInputAdornment-root-1210 MuiInputAdornment-positionStart-1212"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-1215 root styled-icon sc-kkGfuU fJNJew"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.8 10.9c-2.27-.59-3-1.2-3-2.15 0-1.09 1.01-1.85 2.7-1.85 1.78 0 2.44.85 2.5 2.1h2.21c-.07-1.72-1.12-3.3-3.21-3.81V3h-3v2.16c-1.94.42-3.5 1.68-3.5 3.61 0 2.31 1.91 3.46 4.7 4.13 2.5.6 3 1.48 3 2.41 0 .69-.49 1.79-2.7 1.79-2.06 0-2.87-.92-2.98-2.1h-2.2c.12 2.19 1.76 3.42 3.68 3.83V21h3v-2.15c1.95-.37 3.5-1.5 3.5-3.55 0-2.84-2.43-3.81-4.7-4.4z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </div>
    <input
      aria-invalid={false}
      className="MuiInputBase-input-1201 MuiOutlinedInput-input-1186 input MuiInputBase-inputType-1204 MuiInputBase-inputAdornedStart-1206 MuiOutlinedInput-inputAdornedStart-1189"
      disabled={false}
      min={1}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="0.00"
      required={false}
      type="number"
      value={null}
    />
  </div>
  <p
    className="MuiFormHelperText-root-1224 helper MuiFormHelperText-contained-1228"
  >
    helper text
  </p>
</div>
`;

exports[`Storyshots Inputs|CurrencyInput label 1`] = `
Array [
  <div
    className="sc-kEYyzF eSnDJP sc-ckVGcZ XLTwD"
  >
    <span>
      label text
    </span>
  </div>,
  <div
    className="MuiFormControl-root-1232 root MuiFormControl-marginNormal-1233 sc-kEYyzF eSnDJP sc-hMqMXs guUkGE"
  >
    <div
      className="MuiInputBase-root-1249 MuiOutlinedInput-root-1236 base-input MuiInputBase-formControl-1250 MuiInputBase-adornedStart-1253 MuiOutlinedInput-adornedStart-1239"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="MuiPrivateNotchedOutline-root-1266 MuiOutlinedInput-notchedOutline-1243 outline"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="MuiPrivateNotchedOutline-legend-1267"
          style={
            Object {
              "width": 0,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <div
        className="MuiInputAdornment-root-1268 MuiInputAdornment-positionStart-1270"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-1273 root styled-icon sc-kkGfuU fJNJew"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.8 10.9c-2.27-.59-3-1.2-3-2.15 0-1.09 1.01-1.85 2.7-1.85 1.78 0 2.44.85 2.5 2.1h2.21c-.07-1.72-1.12-3.3-3.21-3.81V3h-3v2.16c-1.94.42-3.5 1.68-3.5 3.61 0 2.31 1.91 3.46 4.7 4.13 2.5.6 3 1.48 3 2.41 0 .69-.49 1.79-2.7 1.79-2.06 0-2.87-.92-2.98-2.1h-2.2c.12 2.19 1.76 3.42 3.68 3.83V21h3v-2.15c1.95-.37 3.5-1.5 3.5-3.55 0-2.84-2.43-3.81-4.7-4.4z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </div>
      <input
        aria-invalid={false}
        className="MuiInputBase-input-1259 MuiOutlinedInput-input-1244 input MuiInputBase-inputType-1262 MuiInputBase-inputAdornedStart-1264 MuiOutlinedInput-inputAdornedStart-1247"
        disabled={false}
        min={1}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="0.00"
        required={false}
        type="number"
        value={null}
      />
    </div>
  </div>,
]
`;

exports[`Storyshots Inputs|NumberInput default 1`] = `
<div
  className="MuiFormControl-root-1282 root MuiFormControl-marginNormal-1283 sc-iAyFgw evOoIn sc-hMqMXs guUkGE"
>
  <div
    className="MuiInputBase-root-1299 MuiOutlinedInput-root-1286 base-input MuiInputBase-formControl-1300"
    onClick={[Function]}
  >
    <fieldset
      aria-hidden={true}
      className="MuiPrivateNotchedOutline-root-1316 MuiOutlinedInput-notchedOutline-1293 outline"
      style={
        Object {
          "paddingLeft": 8,
        }
      }
    >
      <legend
        className="MuiPrivateNotchedOutline-legend-1317"
        style={
          Object {
            "width": 0.01,
          }
        }
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </legend>
    </fieldset>
    <input
      aria-invalid={false}
      className="MuiInputBase-input-1309 MuiOutlinedInput-input-1294 input MuiInputBase-inputType-1312"
      disabled={false}
      min={1}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="123"
      required={false}
      type="number"
      value={null}
    />
  </div>
</div>
`;

exports[`Storyshots Inputs|NumberInput helper text 1`] = `
<div
  className="MuiFormControl-root-1318 root MuiFormControl-marginNormal-1319 sc-iAyFgw evOoIn sc-hMqMXs guUkGE"
>
  <div
    className="MuiInputBase-root-1335 MuiOutlinedInput-root-1322 base-input MuiInputBase-formControl-1336"
    onClick={[Function]}
  >
    <fieldset
      aria-hidden={true}
      className="MuiPrivateNotchedOutline-root-1352 MuiOutlinedInput-notchedOutline-1329 outline"
      style={
        Object {
          "paddingLeft": 8,
        }
      }
    >
      <legend
        className="MuiPrivateNotchedOutline-legend-1353"
        style={
          Object {
            "width": 0.01,
          }
        }
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </legend>
    </fieldset>
    <input
      aria-invalid={false}
      className="MuiInputBase-input-1345 MuiOutlinedInput-input-1330 input MuiInputBase-inputType-1348"
      disabled={false}
      min={1}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="123"
      required={false}
      type="number"
      value={null}
    />
  </div>
  <p
    className="MuiFormHelperText-root-1354 helper MuiFormHelperText-contained-1358"
  >
    helper text
  </p>
</div>
`;

exports[`Storyshots Inputs|NumberInput label 1`] = `
Array [
  <div
    className="sc-iAyFgw evOoIn sc-ckVGcZ XLTwD"
  >
    <span>
      label text
    </span>
  </div>,
  <div
    className="MuiFormControl-root-1362 root MuiFormControl-marginNormal-1363 sc-iAyFgw evOoIn sc-hMqMXs guUkGE"
  >
    <div
      className="MuiInputBase-root-1379 MuiOutlinedInput-root-1366 base-input MuiInputBase-formControl-1380"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="MuiPrivateNotchedOutline-root-1396 MuiOutlinedInput-notchedOutline-1373 outline"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="MuiPrivateNotchedOutline-legend-1397"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <input
        aria-invalid={false}
        className="MuiInputBase-input-1389 MuiOutlinedInput-input-1374 input MuiInputBase-inputType-1392"
        disabled={false}
        min={1}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="123"
        required={false}
        type="number"
        value={null}
      />
    </div>
  </div>,
]
`;

exports[`Storyshots Inputs|PasswordInput default 1`] = `
<div
  className="MuiFormControl-root-1398 formControl MuiFormControl-marginNormal-1399 sc-hMqMXs guUkGE"
>
  <div
    className="MuiInputBase-root-1415 MuiOutlinedInput-root-1402 base-input MuiInputBase-formControl-1416 MuiInputBase-adornedEnd-1420 MuiOutlinedInput-adornedEnd-1406"
    onClick={[Function]}
  >
    <fieldset
      aria-hidden={true}
      className="MuiPrivateNotchedOutline-root-1432 MuiOutlinedInput-notchedOutline-1409 outline"
      style={
        Object {
          "paddingLeft": 8,
        }
      }
    >
      <legend
        className="MuiPrivateNotchedOutline-legend-1433"
        style={
          Object {
            "width": 0.01,
          }
        }
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </legend>
    </fieldset>
    <input
      aria-invalid={false}
      className="MuiInputBase-input-1425 MuiOutlinedInput-input-1410 input MuiInputBase-inputType-1428 MuiInputBase-inputAdornedEnd-1431 MuiOutlinedInput-inputAdornedEnd-1414"
      disabled={false}
      min={null}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="placeholder"
      required={false}
      type="password"
      value={null}
    />
    <div
      className="MuiInputAdornment-root-1434 MuiInputAdornment-positionEnd-1437"
    >
      <div
        className="MuiInputAdornment-root-1434 MuiInputAdornment-positionEnd-1437"
      >
        <button
          aria-label="Toggle Password Visibility"
          className="MuiButtonBase-root-1445 MuiIconButton-root-1439 sc-hSdWYo bcZhHK"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-1444"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-1448 root styled-icon sc-cvbbAY lfKHPD"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 7c2.76 0 5 2.24 5 5 0 .65-.13 1.26-.36 1.83l2.92 2.92c1.51-1.26 2.7-2.89 3.43-4.75-1.73-4.39-6-7.5-11-7.5-1.4 0-2.74.25-3.98.7l2.16 2.16C10.74 7.13 11.35 7 12 7zM2 4.27l2.28 2.28.46.46C3.08 8.3 1.78 10.02 1 12c1.73 4.39 6 7.5 11 7.5 1.55 0 3.03-.3 4.38-.84l.42.42L19.73 22 21 20.73 3.27 3 2 4.27zM7.53 9.8l1.55 1.55c-.05.21-.08.43-.08.65 0 1.66 1.34 3 3 3 .22 0 .44-.03.65-.08l1.55 1.55c-.67.33-1.41.53-2.2.53-2.76 0-5-2.24-5-5 0-.79.2-1.53.53-2.2zm4.31-.78l3.15 3.15.02-.16c0-1.66-1.34-3-3-3l-.17.01z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-1457"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Inputs|PasswordInput helper text 1`] = `
<div
  className="MuiFormControl-root-1464 formControl MuiFormControl-marginNormal-1465 sc-hMqMXs guUkGE"
>
  <div
    className="MuiInputBase-root-1481 MuiOutlinedInput-root-1468 base-input MuiInputBase-formControl-1482 MuiInputBase-adornedEnd-1486 MuiOutlinedInput-adornedEnd-1472"
    onClick={[Function]}
  >
    <fieldset
      aria-hidden={true}
      className="MuiPrivateNotchedOutline-root-1498 MuiOutlinedInput-notchedOutline-1475 outline"
      style={
        Object {
          "paddingLeft": 8,
        }
      }
    >
      <legend
        className="MuiPrivateNotchedOutline-legend-1499"
        style={
          Object {
            "width": 0.01,
          }
        }
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </legend>
    </fieldset>
    <input
      aria-invalid={false}
      className="MuiInputBase-input-1491 MuiOutlinedInput-input-1476 input MuiInputBase-inputType-1494 MuiInputBase-inputAdornedEnd-1497 MuiOutlinedInput-inputAdornedEnd-1480"
      disabled={false}
      min={null}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="placeholder"
      required={false}
      type="password"
      value={null}
    />
    <div
      className="MuiInputAdornment-root-1500 MuiInputAdornment-positionEnd-1503"
    >
      <div
        className="MuiInputAdornment-root-1500 MuiInputAdornment-positionEnd-1503"
      >
        <button
          aria-label="Toggle Password Visibility"
          className="MuiButtonBase-root-1511 MuiIconButton-root-1505 sc-hSdWYo bcZhHK"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-1510"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-1514 root styled-icon sc-cvbbAY lfKHPD"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 7c2.76 0 5 2.24 5 5 0 .65-.13 1.26-.36 1.83l2.92 2.92c1.51-1.26 2.7-2.89 3.43-4.75-1.73-4.39-6-7.5-11-7.5-1.4 0-2.74.25-3.98.7l2.16 2.16C10.74 7.13 11.35 7 12 7zM2 4.27l2.28 2.28.46.46C3.08 8.3 1.78 10.02 1 12c1.73 4.39 6 7.5 11 7.5 1.55 0 3.03-.3 4.38-.84l.42.42L19.73 22 21 20.73 3.27 3 2 4.27zM7.53 9.8l1.55 1.55c-.05.21-.08.43-.08.65 0 1.66 1.34 3 3 3 .22 0 .44-.03.65-.08l1.55 1.55c-.67.33-1.41.53-2.2.53-2.76 0-5-2.24-5-5 0-.79.2-1.53.53-2.2zm4.31-.78l3.15 3.15.02-.16c0-1.66-1.34-3-3-3l-.17.01z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-1531"
          />
        </button>
      </div>
    </div>
  </div>
  <p
    className="MuiFormHelperText-root-1523 helper MuiFormHelperText-contained-1527"
  >
    helper text
  </p>
</div>
`;

exports[`Storyshots Inputs|PasswordInput label 1`] = `
Array [
  <div
    className="sc-ckVGcZ XLTwD"
  >
    <span>
      label text
    </span>
  </div>,
  <div
    className="MuiFormControl-root-1538 formControl MuiFormControl-marginNormal-1539 sc-hMqMXs guUkGE"
  >
    <div
      className="MuiInputBase-root-1555 MuiOutlinedInput-root-1542 base-input MuiInputBase-formControl-1556 MuiInputBase-adornedEnd-1560 MuiOutlinedInput-adornedEnd-1546"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="MuiPrivateNotchedOutline-root-1572 MuiOutlinedInput-notchedOutline-1549 outline"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="MuiPrivateNotchedOutline-legend-1573"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <input
        aria-invalid={false}
        className="MuiInputBase-input-1565 MuiOutlinedInput-input-1550 input MuiInputBase-inputType-1568 MuiInputBase-inputAdornedEnd-1571 MuiOutlinedInput-inputAdornedEnd-1554"
        disabled={false}
        min={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="placeholder"
        required={false}
        type="password"
        value={null}
      />
      <div
        className="MuiInputAdornment-root-1574 MuiInputAdornment-positionEnd-1577"
      >
        <div
          className="MuiInputAdornment-root-1574 MuiInputAdornment-positionEnd-1577"
        >
          <button
            aria-label="Toggle Password Visibility"
            className="MuiButtonBase-root-1585 MuiIconButton-root-1579 sc-hSdWYo bcZhHK"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-1584"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-1588 root styled-icon sc-cvbbAY lfKHPD"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 7c2.76 0 5 2.24 5 5 0 .65-.13 1.26-.36 1.83l2.92 2.92c1.51-1.26 2.7-2.89 3.43-4.75-1.73-4.39-6-7.5-11-7.5-1.4 0-2.74.25-3.98.7l2.16 2.16C10.74 7.13 11.35 7 12 7zM2 4.27l2.28 2.28.46.46C3.08 8.3 1.78 10.02 1 12c1.73 4.39 6 7.5 11 7.5 1.55 0 3.03-.3 4.38-.84l.42.42L19.73 22 21 20.73 3.27 3 2 4.27zM7.53 9.8l1.55 1.55c-.05.21-.08.43-.08.65 0 1.66 1.34 3 3 3 .22 0 .44-.03.65-.08l1.55 1.55c-.67.33-1.41.53-2.2.53-2.76 0-5-2.24-5-5 0-.79.2-1.53.53-2.2zm4.31-.78l3.15 3.15.02-.16c0-1.66-1.34-3-3-3l-.17.01z"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-1597"
            />
          </button>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Inputs|TextInput default 1`] = `
<div
  className="MuiFormControl-root-1604 formControl MuiFormControl-marginNormal-1605 sc-hMqMXs guUkGE"
>
  <div
    className="MuiInputBase-root-1621 MuiOutlinedInput-root-1608 base-input MuiInputBase-formControl-1622"
    onClick={[Function]}
  >
    <fieldset
      aria-hidden={true}
      className="MuiPrivateNotchedOutline-root-1638 MuiOutlinedInput-notchedOutline-1615 outline"
      style={
        Object {
          "paddingLeft": 8,
        }
      }
    >
      <legend
        className="MuiPrivateNotchedOutline-legend-1639"
        style={
          Object {
            "width": 0.01,
          }
        }
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </legend>
    </fieldset>
    <input
      aria-invalid={false}
      className="MuiInputBase-input-1631 MuiOutlinedInput-input-1616 input"
      disabled={false}
      min={null}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="placeholder text"
      required={false}
      type="text"
      value={null}
    />
  </div>
</div>
`;

exports[`Storyshots Inputs|TextInput helper text 1`] = `
<div
  className="MuiFormControl-root-1640 formControl MuiFormControl-marginNormal-1641 sc-hMqMXs guUkGE"
>
  <div
    className="MuiInputBase-root-1657 MuiOutlinedInput-root-1644 base-input MuiInputBase-formControl-1658"
    onClick={[Function]}
  >
    <fieldset
      aria-hidden={true}
      className="MuiPrivateNotchedOutline-root-1674 MuiOutlinedInput-notchedOutline-1651 outline"
      style={
        Object {
          "paddingLeft": 8,
        }
      }
    >
      <legend
        className="MuiPrivateNotchedOutline-legend-1675"
        style={
          Object {
            "width": 0.01,
          }
        }
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </legend>
    </fieldset>
    <input
      aria-invalid={false}
      className="MuiInputBase-input-1667 MuiOutlinedInput-input-1652 input"
      disabled={false}
      min={null}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="placeholder text"
      required={false}
      type="text"
      value={null}
    />
  </div>
  <p
    className="MuiFormHelperText-root-1676 helper MuiFormHelperText-contained-1680"
  >
    helper text
  </p>
</div>
`;

exports[`Storyshots Inputs|TextInput label 1`] = `
Array [
  <div
    className="sc-ckVGcZ XLTwD"
  >
    <span>
      label text
    </span>
  </div>,
  <div
    className="MuiFormControl-root-1684 formControl MuiFormControl-marginNormal-1685 sc-hMqMXs guUkGE"
  >
    <div
      className="MuiInputBase-root-1701 MuiOutlinedInput-root-1688 base-input MuiInputBase-formControl-1702"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="MuiPrivateNotchedOutline-root-1718 MuiOutlinedInput-notchedOutline-1695 outline"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="MuiPrivateNotchedOutline-legend-1719"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <input
        aria-invalid={false}
        className="MuiInputBase-input-1711 MuiOutlinedInput-input-1696 input"
        disabled={false}
        min={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="placeholder text"
        required={false}
        type="text"
        value={null}
      />
    </div>
  </div>,
]
`;

exports[`Storyshots Links|BaseLink default 1`] = `
<a
  className="sc-jWBwVP bAdoGJ"
  classes={
    Object {
      "root": "link",
    }
  }
  href="/path"
  onClick={[Function]}
>
  LABEL TEXT
</a>
`;

exports[`Storyshots Links|BaseLink icon 1`] = `
<a
  className="sc-jWBwVP bAdoGJ"
  classes={
    Object {
      "root": "link",
    }
  }
  href="/path"
  onClick={[Function]}
>
  <svg
    aria-hidden="true"
    className="MuiSvgIcon-root-1720 root styled-icon sc-kvZOFW dBjJux"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
    />
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
  </svg>
  LABEL TEXT
</a>
`;

exports[`Storyshots Links|GhostButtonLink default 1`] = `
<a
  className="sc-brqgnP jgcHOP sc-jWBwVP bAdoGJ"
  classes={
    Object {
      "root": "link",
    }
  }
  href="/path"
  onClick={[Function]}
>
  LABEL TEXT
</a>
`;

exports[`Storyshots Links|GhostButtonLink icon 1`] = `
<a
  className="sc-brqgnP jgcHOP sc-jWBwVP bAdoGJ"
  classes={
    Object {
      "root": "link",
    }
  }
  href="/path"
  onClick={[Function]}
>
  <svg
    aria-hidden="true"
    className="MuiSvgIcon-root-1729 root styled-icon sc-hqyNC jjTLVS"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
    />
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
  </svg>
  LABEL TEXT
</a>
`;

exports[`Storyshots List Items|ListItem button 1`] = `
<div
  className="MuiButtonBase-root-1804 MuiListItem-root-1792 MuiListItem-default-1795 MuiListItem-gutters-1800 MuiListItem-button-1801"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="MuiListItemText-root-1807 item-text"
  >
    <span
      className="MuiTypography-root-1813 MuiTypography-body1-1822 MuiListItemText-primary-1810"
    >
      List Item Text
    </span>
  </div>
  <span
    className="MuiTouchRipple-root-1849"
  />
</div>
`;

exports[`Storyshots List Items|ListItem default 1`] = `
<li
  className="MuiListItem-root-1738 MuiListItem-default-1741 MuiListItem-gutters-1746"
  disabled={false}
>
  <div
    className="MuiListItemText-root-1750 item-text"
  >
    <span
      className="MuiTypography-root-1756 MuiTypography-body1-1765 MuiListItemText-primary-1753"
    >
      List Item Text
    </span>
  </div>
</li>
`;

exports[`Storyshots List Items|ListItem disabled 1`] = `
<li
  className="MuiListItem-root-1856 MuiListItem-default-1859 MuiListItem-gutters-1864 MuiListItem-disabled-1862"
  disabled={true}
>
  <div
    className="MuiListItemText-root-1868 item-text"
  >
    <span
      className="MuiTypography-root-1874 MuiTypography-body1-1883 MuiListItemText-primary-1871"
    >
      List Item Text
    </span>
  </div>
</li>
`;

exports[`Storyshots List Items|ListItem icon 1`] = `
<li
  className="MuiListItem-root-1910 MuiListItem-default-1913 MuiListItem-gutters-1918"
  disabled={false}
  onClick={[Function]}
>
  <div
    className="MuiListItemText-root-1922 item-text"
  >
    <span
      className="MuiTypography-root-1928 MuiTypography-body1-1937 MuiListItemText-primary-1925"
    >
      List Item Text
    </span>
  </div>
  <div
    className="MuiListItemIcon-root-1964"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-1965 root styled-icon sc-jbKcbu ewAZlw"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
  </div>
</li>
`;

exports[`Storyshots List Items|ListItem selected 1`] = `
<li
  className="MuiListItem-root-1974 MuiListItem-default-1977 MuiListItem-gutters-1982 MuiListItem-selected-1985"
  disabled={false}
>
  <div
    className="MuiListItemText-root-1986 item-text"
  >
    <span
      className="MuiTypography-root-1992 MuiTypography-body1-2001 MuiListItemText-primary-1989"
    >
      List Item Text
    </span>
  </div>
</li>
`;

exports[`Storyshots Loading Indicators|LoadingIndicator default 1`] = `
<div
  className="sc-cMljjf laXBhM"
>
  <section
    className="sc-gPEVay ilytYI"
  >
    <div
      className="sc-dNLxif emzrzk"
    />
    <div
      className="sc-jqCOkK gxzCwc"
    />
    <div
      className="sc-uJMKN hgyXdK"
    />
    <div
      className="sc-bbmXgH ecNIoX"
    />
    <div
      className="sc-gGBfsJ blkeBt"
    />
    <div
      className="sc-jnlKLf fCanst"
    />
    <div
      className="sc-fYxtnH dvpcKy"
    />
    <div
      className="sc-tilXH dFxif"
    />
    <div
      className="sc-hEsumM kATmHq"
    />
    <div
      className="sc-ktHwxA cuFdWB"
    />
    <div
      className="sc-cIShpX kVgZKa"
    />
    <div
      className="sc-kafWEX bdvECV"
    />
  </section>
</div>
`;

exports[`Storyshots Loading Indicators|SmallLoadingIndicator default 1`] = `
<span
  className="sc-jAaTju fAhvmw"
>
  <span
    className="sc-jDwBTQ bJGZrC"
  >
    <div
      className="sc-feJyhm eEKFhN"
    />
    <div
      className="sc-iELTvK bZGCyo"
    />
    <div
      className="sc-cmTdod eABrSS"
    />
    <div
      className="sc-jwKygS eroIow"
    />
    <div
      className="sc-btzYZH dLgoOn"
    />
    <div
      className="sc-lhVmIH bRwIie"
    />
    <div
      className="sc-bYSBpT iwKmub"
    />
    <div
      className="sc-elJkPf kEfAFP"
    />
    <div
      className="sc-jtRfpW frrxNQ"
    />
    <div
      className="sc-kTUwUJ kKWMei"
    />
    <div
      className="sc-dqBHgY gcUXlU"
    />
    <div
      className="sc-gxMtzJ isajRs"
    />
  </span>
</span>
`;

exports[`Storyshots Paper|BasePaper default 1`] = `
<div
  className="MuiPaper-root-2028 MuiPaper-elevation2-2032 MuiPaper-rounded-2029 sc-iRbamj dkwace"
>
  <div
    style={
      Object {
        "padding": "2rem",
      }
    }
  >
    paper text
  </div>
</div>
`;

exports[`Storyshots Paper|BasePaper image 1`] = `
<div
  className="MuiPaper-root-2055 MuiPaper-elevation2-2059 MuiPaper-rounded-2056 sc-iRbamj dkwace"
>
  <div
    style={
      Object {
        "padding": "2rem",
      }
    }
  >
    <img
      alt="placeholder"
      src="imagePlaceholder.svg"
      style={
        Object {
          "width": "10rem",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Paper|InsetPaper default 1`] = `
<div
  className="MuiPaper-root-2082 MuiPaper-elevation2-2086 MuiPaper-rounded-2083 sc-jlyJG cdeZdN sc-iRbamj dkwace"
>
  <div
    style={
      Object {
        "padding": "2rem",
      }
    }
  >
    paper text
  </div>
</div>
`;

exports[`Storyshots Paper|InsetPaper image 1`] = `
<div
  className="MuiPaper-root-2109 MuiPaper-elevation2-2113 MuiPaper-rounded-2110 sc-jlyJG cdeZdN sc-iRbamj dkwace"
>
  <div
    style={
      Object {
        "padding": "2rem",
      }
    }
  >
    <img
      alt="placeholder"
      src="imagePlaceholder.svg"
      style={
        Object {
          "width": "10rem",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Radio|RadioButtonGroup default 1`] = `
<div
  className="MuiFormControl-root-2136 form"
  disableRipple={false}
  labelPlacement="end"
>
  <div
    className="MuiFormGroup-root-2140 group"
    disableRipple={false}
    labelPlacement="end"
    role="radiogroup"
  >
    <label
      className="MuiFormControlLabel-root-2142 sc-gipzik eDPMxo"
      disableRipple={false}
    >
      <span
        className="MuiButtonBase-root-2163 MuiIconButton-root-2157 MuiPrivateSwitchBase-root-2153 MuiRadio-root-2148 radio MuiRadio-colorSecondary-2152 sc-csuQGl gswEJF"
        labelPlacement="end"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-2162"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-2166"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <input
            checked={false}
            className="MuiPrivateSwitchBase-input-2156"
            disabled={false}
            onChange={[Function]}
            type="radio"
            value="label-text-1"
          />
        </span>
        <span
          className="MuiTouchRipple-root-2211"
        />
      </span>
      <span
        className="MuiTypography-root-2175 MuiTypography-body2-2183 MuiFormControlLabel-label-2147 label"
      >
        LABEL TEXT
      </span>
    </label>
    <label
      className="MuiFormControlLabel-root-2142 sc-gipzik eDPMxo"
      disableRipple={false}
    >
      <span
        className="MuiButtonBase-root-2163 MuiIconButton-root-2157 MuiPrivateSwitchBase-root-2153 MuiRadio-root-2148 radio MuiRadio-colorSecondary-2152 sc-csuQGl gswEJF"
        labelPlacement="end"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-2162"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-2166"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <input
            checked={false}
            className="MuiPrivateSwitchBase-input-2156"
            disabled={false}
            onChange={[Function]}
            type="radio"
            value="label-text-2"
          />
        </span>
        <span
          className="MuiTouchRipple-root-2211"
        />
      </span>
      <span
        className="MuiTypography-root-2175 MuiTypography-body2-2183 MuiFormControlLabel-label-2147 label"
      >
        LABEL TEXT
      </span>
    </label>
    <label
      className="MuiFormControlLabel-root-2142 sc-gipzik eDPMxo"
      disableRipple={false}
    >
      <span
        className="MuiButtonBase-root-2163 MuiIconButton-root-2157 MuiPrivateSwitchBase-root-2153 MuiRadio-root-2148 radio MuiRadio-colorSecondary-2152 sc-csuQGl gswEJF"
        labelPlacement="end"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-2162"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-2166"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <input
            checked={false}
            className="MuiPrivateSwitchBase-input-2156"
            disabled={false}
            onChange={[Function]}
            type="radio"
            value="label-text-3"
          />
        </span>
        <span
          className="MuiTouchRipple-root-2211"
        />
      </span>
      <span
        className="MuiTypography-root-2175 MuiTypography-body2-2183 MuiFormControlLabel-label-2147 label"
      >
        LABEL TEXT
      </span>
    </label>
  </div>
</div>
`;

exports[`Storyshots Radio|RadioButtonGroup disabled 1`] = `
<div
  className="MuiFormControl-root-2218 form"
  labelPlacement="end"
>
  <div
    className="MuiFormGroup-root-2222 group"
    disabled={true}
    labelPlacement="end"
    role="radiogroup"
  >
    <label
      className="MuiFormControlLabel-root-2224 MuiFormControlLabel-disabled-2228 sc-gipzik eDPMxo"
    >
      <span
        className="MuiButtonBase-root-2245 MuiButtonBase-disabled-2246 MuiIconButton-root-2239 MuiIconButton-disabled-2243 MuiPrivateSwitchBase-root-2235 MuiRadio-root-2230 radio MuiRadio-colorSecondary-2234 MuiPrivateSwitchBase-disabled-2237 MuiRadio-disabled-2232 sc-csuQGl gswEJF"
        labelPlacement="end"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
      >
        <span
          className="MuiIconButton-label-2244"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-2248"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <input
            checked={false}
            className="MuiPrivateSwitchBase-input-2238"
            disabled={true}
            onChange={[Function]}
            type="radio"
            value="label-text-1"
          />
        </span>
      </span>
      <span
        className="MuiTypography-root-2257 MuiTypography-body2-2265 MuiFormControlLabel-label-2229 label MuiFormControlLabel-disabled-2228"
      >
        LABEL TEXT
      </span>
    </label>
    <label
      className="MuiFormControlLabel-root-2224 MuiFormControlLabel-disabled-2228 sc-gipzik eDPMxo"
    >
      <span
        className="MuiButtonBase-root-2245 MuiButtonBase-disabled-2246 MuiIconButton-root-2239 MuiIconButton-disabled-2243 MuiPrivateSwitchBase-root-2235 MuiRadio-root-2230 radio MuiRadio-colorSecondary-2234 MuiPrivateSwitchBase-disabled-2237 MuiRadio-disabled-2232 sc-csuQGl gswEJF"
        labelPlacement="end"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
      >
        <span
          className="MuiIconButton-label-2244"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-2248"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <input
            checked={false}
            className="MuiPrivateSwitchBase-input-2238"
            disabled={true}
            onChange={[Function]}
            type="radio"
            value="label-text-2"
          />
        </span>
      </span>
      <span
        className="MuiTypography-root-2257 MuiTypography-body2-2265 MuiFormControlLabel-label-2229 label MuiFormControlLabel-disabled-2228"
      >
        LABEL TEXT
      </span>
    </label>
    <label
      className="MuiFormControlLabel-root-2224 MuiFormControlLabel-disabled-2228 sc-gipzik eDPMxo"
    >
      <span
        className="MuiButtonBase-root-2245 MuiButtonBase-disabled-2246 MuiIconButton-root-2239 MuiIconButton-disabled-2243 MuiPrivateSwitchBase-root-2235 MuiRadio-root-2230 radio MuiRadio-colorSecondary-2234 MuiPrivateSwitchBase-disabled-2237 MuiRadio-disabled-2232 sc-csuQGl gswEJF"
        labelPlacement="end"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
      >
        <span
          className="MuiIconButton-label-2244"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-2248"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <input
            checked={false}
            className="MuiPrivateSwitchBase-input-2238"
            disabled={true}
            onChange={[Function]}
            type="radio"
            value="label-text-3"
          />
        </span>
      </span>
      <span
        className="MuiTypography-root-2257 MuiTypography-body2-2265 MuiFormControlLabel-label-2229 label MuiFormControlLabel-disabled-2228"
      >
        LABEL TEXT
      </span>
    </label>
  </div>
</div>
`;

exports[`Storyshots Tables|BaseTable default 1`] = `
<table
  className="MuiTable-root-2293 sc-Rmtcm jLcvoz"
>
  <thead
    className="MuiTableHead-root-2294 sc-hzDkRC jTxfmm"
  >
    <tr
      className="MuiTableRow-root-2295 MuiTableRow-head-2298 sc-fBuWsC dXNzSI"
    >
      <th
        aria-sort={null}
        className="MuiTableCell-root-2300 MuiTableCell-head-2301 sc-jhAzac eAuGiA"
        iscentered={0}
        scope="col"
      >
        Dessert
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-2300 MuiTableCell-head-2301 sc-jhAzac hTutFn"
        iscentered={1}
        scope="col"
      >
        Calories
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-2300 MuiTableCell-head-2301 sc-jhAzac hTutFn"
        iscentered={1}
        scope="col"
      >
        Fat (g)
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-2300 MuiTableCell-head-2301 sc-jhAzac hTutFn"
        iscentered={1}
        scope="col"
      >
        Carbs (g)
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-2300 MuiTableCell-head-2301 sc-jhAzac hTutFn"
        iscentered={1}
        scope="col"
      >
        Protein (g)
      </th>
    </tr>
  </thead>
  <tbody
    className="MuiTableBody-root-2312 sc-bRBYWo clODSm"
    hovercolor="#F8F8F8"
  >
    <tr
      className="MuiTableRow-root-2295 sc-fBuWsC dXNzSI"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-2300 MuiTableCell-body-2302 sc-jhAzac eAuGiA"
        iscentered={0}
      >
        Cupcake
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2300 MuiTableCell-body-2302 sc-jhAzac hTutFn"
        iscentered={1}
      >
        305
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2300 MuiTableCell-body-2302 sc-jhAzac hTutFn"
        iscentered={1}
      >
        4
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2300 MuiTableCell-body-2302 sc-jhAzac hTutFn"
        iscentered={1}
      >
        67
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2300 MuiTableCell-body-2302 sc-jhAzac hTutFn"
        iscentered={1}
      >
        4
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-2295 sc-fBuWsC dXNzSI"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-2300 MuiTableCell-body-2302 sc-jhAzac eAuGiA"
        iscentered={0}
      >
        Eclair
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2300 MuiTableCell-body-2302 sc-jhAzac hTutFn"
        iscentered={1}
      >
        262
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2300 MuiTableCell-body-2302 sc-jhAzac hTutFn"
        iscentered={1}
      >
        16
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2300 MuiTableCell-body-2302 sc-jhAzac hTutFn"
        iscentered={1}
      >
        24
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2300 MuiTableCell-body-2302 sc-jhAzac hTutFn"
        iscentered={1}
      >
        6
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-2295 sc-fBuWsC dXNzSI"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-2300 MuiTableCell-body-2302 sc-jhAzac eAuGiA"
        iscentered={0}
      >
        Gingerbread
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2300 MuiTableCell-body-2302 sc-jhAzac hTutFn"
        iscentered={1}
      >
        356
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2300 MuiTableCell-body-2302 sc-jhAzac hTutFn"
        iscentered={1}
      >
        16
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2300 MuiTableCell-body-2302 sc-jhAzac hTutFn"
        iscentered={1}
      >
        49
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2300 MuiTableCell-body-2302 sc-jhAzac hTutFn"
        iscentered={1}
      >
        4
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-2295 sc-fBuWsC dXNzSI"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-2300 MuiTableCell-body-2302 sc-jhAzac eAuGiA"
        iscentered={0}
      >
        Ice Cream
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2300 MuiTableCell-body-2302 sc-jhAzac hTutFn"
        iscentered={1}
      >
        207
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2300 MuiTableCell-body-2302 sc-jhAzac hTutFn"
        iscentered={1}
      >
        11
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2300 MuiTableCell-body-2302 sc-jhAzac hTutFn"
        iscentered={1}
      >
        24
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2300 MuiTableCell-body-2302 sc-jhAzac hTutFn"
        iscentered={1}
      >
        4
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Tables|BaseTable offset 1`] = `
<table
  className="MuiTable-root-2313 sc-Rmtcm jLcvoz"
>
  <thead
    className="MuiTableHead-root-2314 sc-hzDkRC jTxfmm"
  >
    <tr
      className="MuiTableRow-root-2315 MuiTableRow-head-2318 sc-fBuWsC dXNzSI"
    >
      <th
        aria-sort={null}
        className="MuiTableCell-root-2320 MuiTableCell-head-2321 sc-jhAzac eAuGiA"
        iscentered={0}
        scope="col"
      >
        
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-2320 MuiTableCell-head-2321 sc-jhAzac hTutFn"
        iscentered={1}
        scope="col"
      >
        column one
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-2320 MuiTableCell-head-2321 sc-jhAzac hTutFn"
        iscentered={1}
        scope="col"
      >
        column two
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-2320 MuiTableCell-head-2321 sc-jhAzac hTutFn"
        iscentered={1}
        scope="col"
      >
        column three
      </th>
    </tr>
  </thead>
  <tbody
    className="MuiTableBody-root-2332 sc-bRBYWo clODSm"
    hovercolor="#F8F8F8"
  >
    <tr
      className="MuiTableRow-root-2315 sc-fBuWsC dXNzSI"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-2320 MuiTableCell-body-2322 sc-jhAzac eAuGiA"
        iscentered={0}
      >
        row one
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2320 MuiTableCell-body-2322 sc-jhAzac hTutFn"
        iscentered={1}
      >
        01-01
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2320 MuiTableCell-body-2322 sc-jhAzac hTutFn"
        iscentered={1}
      >
        01-02
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2320 MuiTableCell-body-2322 sc-jhAzac hTutFn"
        iscentered={1}
      >
        01-03
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-2315 sc-fBuWsC dXNzSI"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-2320 MuiTableCell-body-2322 sc-jhAzac eAuGiA"
        iscentered={0}
      >
        row two
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2320 MuiTableCell-body-2322 sc-jhAzac hTutFn"
        iscentered={1}
      >
        02-01
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2320 MuiTableCell-body-2322 sc-jhAzac hTutFn"
        iscentered={1}
      >
        02-02
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2320 MuiTableCell-body-2322 sc-jhAzac hTutFn"
        iscentered={1}
      >
        02-03
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-2315 sc-fBuWsC dXNzSI"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-2320 MuiTableCell-body-2322 sc-jhAzac eAuGiA"
        iscentered={0}
      >
        row three
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2320 MuiTableCell-body-2322 sc-jhAzac hTutFn"
        iscentered={1}
      >
        03-01
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2320 MuiTableCell-body-2322 sc-jhAzac hTutFn"
        iscentered={1}
      >
        03-02
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2320 MuiTableCell-body-2322 sc-jhAzac hTutFn"
        iscentered={1}
      >
        03-03
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-2315 sc-fBuWsC dXNzSI"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-2320 MuiTableCell-body-2322 sc-jhAzac eAuGiA"
        iscentered={0}
      >
        row four
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2320 MuiTableCell-body-2322 sc-jhAzac hTutFn"
        iscentered={1}
      >
        04-01
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2320 MuiTableCell-body-2322 sc-jhAzac hTutFn"
        iscentered={1}
      >
        04-02
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2320 MuiTableCell-body-2322 sc-jhAzac hTutFn"
        iscentered={1}
      >
        04-03
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-2315 sc-fBuWsC dXNzSI"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-2320 MuiTableCell-body-2322 sc-jhAzac eAuGiA"
        iscentered={0}
      >
        row five
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2320 MuiTableCell-body-2322 sc-jhAzac hTutFn"
        iscentered={1}
      >
        05-01
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2320 MuiTableCell-body-2322 sc-jhAzac hTutFn"
        iscentered={1}
      >
        05-02
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-2320 MuiTableCell-body-2322 sc-jhAzac hTutFn"
        iscentered={1}
      >
        05-03
      </td>
    </tr>
  </tbody>
</table>
`;
